sas-core/main/default/objects/Group_Travel_Request__c/fields/Association__c.field-meta.xml
<CustomField>
    <fullName>Association__c</fullName>
    <label>Group Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>