sas-core/main/default/objects/Group_Travel_Request__c/fields/Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>Departure_Time__c</fullName>
    <label>Departure Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
                <label>Morning (6:00-9:00)</label>
            </value>
            <value>
                <fullName>Midmorning</fullName>
                <label>Midmorning (9:00-12:00)</label>
            </value>
            <value>
                <fullName>Afternoon</fullName>
                <label>Afternoon (12:00-18:00)</label>
            </value>
            <value>
                <fullName>Evening</fullName>
                <label>Evening (18:00-00:00)</label>
            </value>
            <value>
                <fullName>Any Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>