sas-core/main/default/objects/Group_Travel_Request__c/fields/Sport_Code__c.field-meta.xml
<CustomField>
    <fullName>Sport_Code__c</fullName>
    <label>Sport Code</label>
    <length>7</length>
    <type>Text</type>
</CustomField>